# powergym-back

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  deploy.sh  docker-compose.development.yml  docker-compose.example.yml  docker-compose.production.yml  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  rebuild.sh  requirements.txt  tests.rar
.github/workflows/: README.md  activate-subscriptions.yml  expire-subscriptions.yml
alembic/versions/: 4731e465a2d9_create_rewards_table.py  5ca3a67ca896_add_final_price_to_subscriptions.py
app/api/: dependencies.py
app/core/: async_processing.py  config.py  constants.py  security.py
app/db/: base_repository.py  models.py  session.py
app/middleware/: error_handler.py  logging.py
app/repositories/: attendance_repository.py  biometric_repository.py  movement_repository.py  payment_repository.py  plan_repository.py  reward_repository.py  subscription_repository.py  user_repository.py
app/schemas/: attendance.py  inventory.py  reward.py  statistics.py  subscription.py
docs/: API.md  ARCHITECTURE.md  BACKUP.md  CI_CD.md  CONFIGURATION.md  DATABASE.md  DEPLOYMENT.md  DEVELOPMENT.md  FACE_RECOGNITION.md  NOTIFICATIONS.md  QUICK_START_BACKUPS.md  REWARDS.md  SCRIPTS.md  SECURITY.md  SETUP.md  TESTING.md  TROUBLESHOOTING.md
scripts/: BACKUP_README.md  QUICK_START_BACKUPS.md  backup-db.sh  deploy.sh  rebuild.sh  restore-db.sh  setup-backup-cron.sh
tests/: CORRECCIONES_NEcesarias.md  DOCUMENTACION_PRUEBAS.md  GUIA_CORRECCIONES.md  PRUEBAS_SUGERIDAS.md  README_IMPLEMENTACION.md  conftest.py  test_api_face_recognition.py  test_attendance_repository.py  test_attendance_service_example.py  test_client_repository.py  test_client_service.py  test_embedding_service.py  test_face_service.py  test_payment_service.py  test_plan_service.py  test_product_service.py  test_subscription_repository.py  test_subscription_service.py  test_user_repository.py  test_user_service.py
(+49 files in other folders)
