[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiocache>=0.12.3",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "cryptography>=46.0.2",
    "fastapi>=0.118.0",
    "greenlet>=3.1.1",
    "httpx>=0.28.1",
    "insightface>=0.7.3",
    "numpy>=1.21.6,<2.0",
    "onnxruntime==1.18.1",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless>=4.11.0.86",
    "pgvector>=0.4.1",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "pwdlib[argon2]>=0.2.1",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.11.9",
    "pyjwt>=2.10.1",
    "python-dateutil>=2.9.0.post0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "python-telegram-bot>=22.5",
    "pytz>=2025.2",
    "redis>=6.4.0",
    "setuptools<81.0.0",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.36",
    "uvicorn[standard]>=0.37.0",
]
